--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
   },
   "bundlesize": [
     {
-      "path": "./build/bundles/OneSignalSDK.js",
+      "path": "./build/bundles/OneSignalSDK.page.js",
       "maxSize": "3 kB",
       "compression": "gzip"
     },
