--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,18 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Debug AVA by selected test (w/ quotes)",
-            "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ava",
-            "runtimeArgs": [
-              // Test by line number does not work, due to ava limitation
-              // https://github.com/avajs/ava/blob/main/docs/05-command-line.md#running-multiple-tests
-              // "${file}:${lineNumber}",
-              
-              "${file}",
-              "--serial",
-
-              // NOTE: Make sure to select the test name with quotes
-              "--match=${selectedText}"
-            ], 
-            "outputCapture": "std",
-            "skipFiles": [
-              "<node_internals>/**/*.js"
-            ]
-          }
-    ]
+  "version": "1.0.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Jest: current file",
+      //"env": { "NODE_ENV": "test" },
+      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "args": ["${fileBasenameNoExtension}", "--config", "jest.config.js"],
+      "console": "integratedTerminal",
+      "disableOptimisticBPs": true,
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
+      }
+    }
+  ]
 }
