--- a/package.json
+++ b/package.json
@@ -93,8 +93,9 @@
     "svgo": "^0.7.2",
     "text-encoding": "^0.6.4",
     "timemachine": "^0.3.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.2",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.1.1",
+    "typescript": "^4.9.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.3.0",
     "webpack-bundle-analyzer": "^3.3.2",
