--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,12 @@
     "strictPropertyInitialization": true,
     "strictFunctionTypes": true,
     "baseUrl": ".",
+    "types": ["jest", "node"]
   },
   "include": [
+    "__test__/**/*",
     "src/**/*",
     "test/**/*",
-    "typings/**/*"
+    "typings/**/*",
   ]
 }
