--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "dependencies": {
     "@types/intl-tel-input": "^17.0.1",
     "bowser": "github:OneSignal/bowser#fix-android8-opr6-build-detection",
-    "jsdom": "^9.12.0",
     "jsonp": "github:OneSignal/jsonp#onesignal",
     "node-sass": "^4.9.0",
     "npm-css": "https://registry.npmjs.org/npm-css/-/npm-css-0.2.3.tgz",
     "postcss-discard-comments": "https://registry.npmjs.org/postcss-discard-comments/-/postcss-discard-comments-2.0.4.tgz",
     "postcss-filter-plugins": "https://registry.npmjs.org/postcss-filter-plugins/-/postcss-filter-plugins-2.0.2.tgz",
-    "tslib": "^1.9.0",
+    "tslib": "^2.5.0",
     "validator": "https://registry.npmjs.org/validator/-/validator-6.0.0.tgz"
   },
   "scripts": {
@@ -29,7 +28,7 @@
     "build:dev": "ENV=development yarn transpile:sources && ENV=development yarn bundle-sw && ENV=development yarn bundle-sdk && ENV=development yarn bundle-page-sdk-es6 && ENV=development build/scripts/publish.sh",
     "build:staging": "ENV=staging yarn transpile:sources && ENV=staging yarn bundle-sw && ENV=staging yarn bundle-sdk && ENV=staging yarn bundle-page-sdk-es6 && ENV=staging build/scripts/publish.sh",
     "build:prod": "ENV=production yarn transpile:sources && ENV=production yarn bundle-sw && ENV=production yarn bundle-sdk && ENV=production yarn bundle-page-sdk-es6 && bundlesize && ENV=production build/scripts/publish.sh",
-    "test": "ENV=development yarn transpile:tests && yarn run ava --verbose --color --watch",
+    "test": "yarn run jest",
     "test:noWatch": "ENV=development yarn transpile:tests && ava --verbose --color --watch=false",
     "test:CI": "ENV=development yarn transpile:tests && ava --config ava-ci-config.js --verbose --color --watch=false",
     "publish": "yarn clean && yarn build:prod && yarn",
@@ -55,12 +54,13 @@
     "@types/core-js": "latest",
     "@types/cors": "latest",
     "@types/express": "latest",
-    "@types/jsdom": "^2.0.30",
+    "@types/jest": "^29.4.0",
+    "@types/jsdom": "^21.1.0",
     "@types/loglevel": "latest",
     "@types/mocha": "^5.0.0",
     "@types/nconf": "latest",
     "@types/nock": "^9.1.2",
-    "@types/node": "^9.6.0",
+    "@types/node": "^18.13.0",
     "@types/object-assign": "^4.0.30",
     "@types/requirejs": "latest",
     "@types/sinon": "^2.3.3",
@@ -81,6 +81,8 @@
     "fake-indexeddb": "^4.0.1",
     "imports-loader": "^0.7.1",
     "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "^21.1.0",
     "md5-file": "^3.2.2",
     "nock": "^9.1.6",
     "node-dir": "^0.1.16",
