Test Environment Improvements
Motivation: 
* update the launch.json: remove windows-specific program
* update CI.yml to run test script
* jest.setupfiles.ts to help log unhandledRejections

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         continue-on-error: true
         run: yarn lint
       - name: "[Test] Run all jest tests"
-        run: yarn jest
+        run: yarn test
