--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "build:dev": "ENV=development yarn transpile:sources && ENV=development yarn bundle-sw && ENV=development yarn bundle-sdk && ENV=development yarn bundle-page-sdk-es6 && ENV=development build/scripts/publish.sh",
     "build:staging": "ENV=staging yarn transpile:sources && ENV=staging yarn bundle-sw && ENV=staging yarn bundle-sdk && ENV=staging yarn bundle-page-sdk-es6 && ENV=staging build/scripts/publish.sh",
     "build:prod": "ENV=production yarn transpile:sources && ENV=production yarn bundle-sw && ENV=production yarn bundle-sdk && ENV=production yarn bundle-page-sdk-es6 && bundlesize && ENV=production build/scripts/publish.sh",
-    "test": "yarn run jest",
-    "test:noWatch": "ENV=development yarn transpile:tests && ava --verbose --color --watch=false",
-    "test:CI": "ENV=development yarn transpile:tests && ava --config ava-ci-config.js --verbose --color --watch=false",
+    "test": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" yarn run jest --detectOpenHandles --forceExit --runInBand",
     "publish": "yarn clean && yarn build:prod && yarn",
     "build:dev-dev": "./build/scripts/build.sh -f development -t development",
     "build:dev-prod": "./build/scripts/build.sh -f development -t production",
@@ -82,6 +80,7 @@
     "imports-loader": "^0.7.1",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-localstorage-mock": "^2.4.26",
     "jsdom": "^21.1.0",
     "md5-file": "^3.2.2",
     "nock": "^9.1.6",
