--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "@types/intl-tel-input": "^17.0.1",
     "bowser": "github:OneSignal/bowser#fix-android8-opr6-build-detection",
+    "core-js-bundle": "^3.1.3",
+    "glob": "^10.2.2",
     "jsonp": "github:OneSignal/jsonp#onesignal",
-    "node-sass": "^8.0.0",
     "npm-css": "https://registry.npmjs.org/npm-css/-/npm-css-0.2.3.tgz",
+    "postcss": "^8.1.0",
     "postcss-discard-comments": "https://registry.npmjs.org/postcss-discard-comments/-/postcss-discard-comments-2.0.4.tgz",
     "postcss-filter-plugins": "https://registry.npmjs.org/postcss-filter-plugins/-/postcss-filter-plugins-2.0.2.tgz",
+    "regenerator-runtime": "^0.13.2",
+    "sass": "^1.62.0",
+    "terser-webpack-plugin": "^5.3.7",
     "tslib": "^2.5.0",
     "validator": "https://registry.npmjs.org/validator/-/validator-6.0.0.tgz"
   },
@@ -51,7 +56,7 @@
     "@types/chai": "latest",
     "@types/core-js": "latest",
     "@types/cors": "latest",
-    "@types/express": "latest",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsdom": "^21.1.0",
     "@types/loglevel": "latest",
@@ -67,15 +72,16 @@
     "@types/whatwg-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.14",
     "ava": "^3.8.2",
-    "awesome-typescript-loader": "^4.0.1",
     "bundlesize": "^0.18.0",
-    "css-loader": "^0.26.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "deepmerge": "^4.2.2",
     "dom-storage": "^2.0.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fake-indexeddb": "^4.0.1",
     "imports-loader": "^0.7.1",
     "jest": "^29.0.1",
@@ -83,23 +89,26 @@
     "jest-localstorage-mock": "^2.4.26",
     "jsdom": "^21.1.0",
     "md5-file": "^3.2.2",
+    "mini-css-extract-plugin": "^2.7.5",
     "nock": "^9.1.6",
     "node-dir": "^0.1.16",
     "node-fetch": "^2.6.1",
+    "node-sass": "^8.0.0",
     "nyc": "^11.1.0",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^7.2.4",
     "prettier": "^2.7.1",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^13.2.2",
     "sinon": "^2.4.1",
+    "style-loader": "^3.3.2",
     "svgo": "^0.7.2",
     "timemachine": "^0.3.0",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.1.1",
     "typescript": "^4.9.5",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.3.0",
+    "webpack": "^5.80.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^5.0.2"
   },
   "ava": {
     "extensions": [
