--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "deepmerge": "^4.2.2",
     "dom-storage": "^2.0.2",
     "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "9.0.0",
     "fake-indexeddb": "^4.0.1",
     "imports-loader": "^0.7.1",
     "jest": "^29.0.1",
@@ -96,7 +96,7 @@
     "node-sass": "^8.0.0",
     "nyc": "^11.1.0",
     "postcss-loader": "^7.2.4",
-    "prettier": "^2.7.1",
+    "prettier": "3.0.2",
     "sass-loader": "^13.2.2",
     "sinon": "^2.4.1",
     "style-loader": "^3.3.2",
