Updated to bundlesize2 and update yarn.lock
This wasn't bundlesize was not compatible with node 18 so had to update
to this new package.

yarn.lock contains changes to both update to node 18 and switching to
the bundlesize2 package.

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.14",
     "ava": "^3.8.2",
-    "bundlesize": "^0.18.0",
+    "bundlesize2": "^0.0.31",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
