--- a/express_webpack/package.json
+++ b/express_webpack/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.3",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
