--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,12 @@ jobs:
     container:
       image: python:2.7.18-buster
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install Yarn
-        run: npm install -g yarn
+          node-version-file: '.nvmrc'
       - name: "[Setup] Install dependencies"
         run: yarn
       - name: "[Test] Run linters"
