--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.4'
 services:
   onesignal-web-sdk-dev:
       image: onesignal/web-sdk-dev
@@ -6,7 +5,7 @@ services:
       build: .
       volumes:
         - .:/sdk:cached
-        - sdk-build:/sdk/build/releases
+        - ./build/releases:/sdk/build/releases
       ports:
           - published: 4001
             target: 4001
