--- a/package.json
+++ b/package.json
@@ -21,26 +21,25 @@
   "scripts": {
     "ngrok": "./build/scripts/ngrok.sh",
     "clean": "rm -rf build/ts-to-es6 && rm -rf build/bundles",
-    "transpile:sources": "$(yarn bin)/tsc --project build/config/tsconfig.json",
-    "transpile:tests": "$(yarn bin)/tsc --project build/config/tsconfig.tests.json",
-    "bundle": "TESTS=false $(yarn bin)/webpack --config build/config/webpack.config.js",
-    "bundle-sw": "TESTS=false $(yarn bin)/webpack --config build/config/serviceworker.config.js",
-    "bundle-sdk": "TESTS=false $(yarn bin)/webpack --config build/config/sdk.config.js",
-    "bundle-page-sdk-es6": "TESTS=false $(yarn bin)/webpack --config build/config/page-sdk-es6.config.js",
-    "bundle:analyze": "ANALYZE=true ENV=production TESTS=false $(yarn bin)/webpack --config build/config/webpack.config.js --profile --json > stats.json",
-    "bundle-sw:analyze": "ANALYZE=true ENV=production TESTS=false $(yarn bin)/webpack --config build/config/serviceworker.config.js --profile --json > stats.json",
-    "bundle-sdk:analyze": "ANALYZE=true ENV=production TESTS=false $(yarn bin)/webpack --config build/config/sdk.config.js --profile --json > stats.json",
-    "build:dev": "ENV=development yarn transpile:sources && ENV=development yarn bundle-sw && ENV=development yarn bundle-sdk && ENV=development yarn bundle-page-sdk-es6 && ENV=development build/scripts/publish.sh",
-    "build:staging": "ENV=staging yarn transpile:sources && ENV=staging yarn bundle-sw && ENV=staging yarn bundle-sdk && ENV=staging yarn bundle-page-sdk-es6 && ENV=staging build/scripts/publish.sh",
-    "build:prod": "ENV=production yarn transpile:sources && ENV=production yarn bundle-sw && ENV=production yarn bundle-sdk && ENV=production yarn bundle-page-sdk-es6 && bundlesize && ENV=production build/scripts/publish.sh",
-    "test": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" yarn run jest --detectOpenHandles --forceExit --runInBand",
-    "test:watch": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" yarn run jest --detectOpenHandles --forceExit --runInBand --watch",
-    "publish": "yarn clean && yarn build:prod && yarn",
+    "transpile:sources": "tsc --project build/config/tsconfig.json",
+    "transpile:tests": "tsc --project build/config/tsconfig.tests.json",
+    "bundle": "TESTS=false webpack --config build/config/webpack.config.js",
+    "bundle-sw": "TESTS=false webpack --config build/config/serviceworker.config.js",
+    "bundle-sdk": "TESTS=false webpack --config build/config/sdk.config.js",
+    "bundle-page-sdk-es6": "TESTS=false webpack --config build/config/page-sdk-es6.config.js",
+    "bundle:analyze": "ANALYZE=true ENV=production TESTS=false webpack --config build/config/webpack.config.js --profile --json > stats.json",
+    "bundle-sw:analyze": "ANALYZE=true ENV=production TESTS=false webpack --config build/config/serviceworker.config.js --profile --json > stats.json",
+    "bundle-sdk:analyze": "ANALYZE=true ENV=production TESTS=false webpack --config build/config/sdk.config.js --profile --json > stats.json",
+    "build:dev": "ENV=development npm run transpile:sources && ENV=development npm run bundle-sw && ENV=development npm run bundle-sdk && ENV=development npm run bundle-page-sdk-es6 && ENV=development build/scripts/publish.sh",
+    "build:staging": "ENV=staging npm run transpile:sources && ENV=staging npm run bundle-sw && ENV=staging npm run bundle-sdk && ENV=staging npm run bundle-page-sdk-es6 && ENV=staging build/scripts/publish.sh",
+    "build:prod": "ENV=production npm run transpile:sources && ENV=production npm run bundle-sw && ENV=production npm run bundle-sdk && ENV=production npm run bundle-page-sdk-es6 && bundlesize && ENV=production build/scripts/publish.sh",
+    "test": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" jest --detectOpenHandles --forceExit --runInBand",
+    "test:watch": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" jest --detectOpenHandles --forceExit --runInBand --watch",
+    "publish": "npm run clean && npm run build:prod",
     "build:dev-dev": "./build/scripts/build.sh -f development -t development -a localhost",
     "build:dev-prod": "./build/scripts/build.sh -f development -t production",
     "build:dev-stag": "./build/scripts/build.sh -f development -t staging",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx; yarn prettylint 'src/**/*' 'test/**/*' '__test__/**/*' --no-editorconfig",
-    "jest": "jest --coverage"
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx; prettylint 'src/**/*' 'test/**/*' '__test__/**/*' --no-editorconfig"
   },
   "config": {
     "sdkVersion": "160300"
