--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@ build/bundles
 build/releases
 build/size-analysis.html
 /config.json
-package-lock.json
 
 .DS_STORE
 *.pem
 *.key
 *.crt
+yarn.lock
 yarn-error.log
 dist/Dev-OneSignalSDK.page.js
 dist/Dev-OneSignalSDK.page.js.map
