--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "build:dev": "ENV=development npm run transpile:sources && ENV=development npm run bundle-sw && ENV=development npm run bundle-sdk && ENV=development npm run bundle-page-sdk-es6 && ENV=development build/scripts/publish.sh",
     "build:staging": "ENV=staging npm run transpile:sources && ENV=staging npm run bundle-sw && ENV=staging npm run bundle-sdk && ENV=staging npm run bundle-page-sdk-es6 && ENV=staging build/scripts/publish.sh",
     "build:prod": "ENV=production npm run transpile:sources && ENV=production npm run bundle-sw && ENV=production npm run bundle-sdk && ENV=production npm run bundle-page-sdk-es6 && bundlesize && ENV=production build/scripts/publish.sh",
-    "test": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" jest --detectOpenHandles --forceExit --runInBand",
-    "test:watch": "NODE_OPTIONS=\"--trace-warnings --unhandled-rejections=warn\" jest --detectOpenHandles --forceExit --runInBand --watch",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "publish": "npm run clean && npm run build:prod",
     "build:dev-dev": "./build/scripts/build.sh -f development -t development -a localhost",
     "build:dev-prod": "./build/scripts/build.sh -f development -t production",
@@ -57,8 +57,7 @@
     "@types/core-js": "latest",
     "@types/cors": "latest",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.4.0",
-    "@types/jsdom": "^21.1.0",
+    "@types/jsdom": "^21.1.7",
     "@types/loglevel": "latest",
     "@types/mocha": "^5.0.0",
     "@types/nconf": "latest",
@@ -72,6 +71,8 @@
     "@types/whatwg-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.5",
     "autoprefixer": "^10.4.14",
     "ava": "^3.8.2",
     "bundlesize2": "^0.0.31",
@@ -83,13 +84,12 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "9.0.0",
     "fake-indexeddb": "^4.0.1",
+    "happy-dom": "^17.0.3",
     "imports-loader": "^0.7.1",
-    "jest": "^29.0.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-localstorage-mock": "^2.4.26",
-    "jsdom": "^21.1.0",
+    "jsdom": "^26.0.0",
     "md5-file": "^3.2.2",
     "mini-css-extract-plugin": "^2.7.5",
+    "msw": "^2.7.0",
     "nock": "^9.1.6",
     "node-dir": "^0.1.16",
     "node-fetch": "^2.6.1",
@@ -102,10 +102,10 @@
     "style-loader": "^3.3.2",
     "svgo": "^0.7.2",
     "timemachine": "^0.3.0",
-    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.1.1",
     "typescript": "^4.9.5",
+    "vitest": "^3.0.5",
     "webpack": "^5.80.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^5.0.2"
