--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,4 @@
 {
   "version": "1.0.0",
-  "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Jest: current file",
-      //"env": { "NODE_ENV": "test" },
-      "program": "${workspaceFolder}/node_modules/jest/bin/jest --detectOpenHandles --runInBand --unhandled-rejections=strict",
-      "args": ["${fileBasenameNoExtension}", "--config", "jest.config.js"],
-      "console": "integratedTerminal",
-      "runtimeExecutable": "/Users/rodrigo/.nvm/versions/node/v14.20.1/bin/node",
-    }
-  ]
+  "configurations": []
 }
