--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noImplicitAny": true,
     "strictPropertyInitialization": true,
     "baseUrl": ".",
-    "types": ["jest", "node", "vitest/globals"]
+    "types": ["node", "vitest/globals"]
   },
   "include": ["__test__/**/*", "src/**/*", "test/**/*", "typings/**/*"]
 }
