--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build:dev": "ENV=development npm run transpile:sources && ENV=development npm run bundle-sw && ENV=development npm run bundle-sdk && ENV=development npm run bundle-page-sdk-es6 && ENV=development build/scripts/publish.sh",
     "build:staging": "ENV=staging npm run transpile:sources && ENV=staging npm run bundle-sw && ENV=staging npm run bundle-sdk && ENV=staging npm run bundle-page-sdk-es6 && ENV=staging build/scripts/publish.sh",
     "build:prod": "ENV=production npm run transpile:sources && ENV=production npm run bundle-sw && ENV=production npm run bundle-sdk && ENV=production npm run bundle-page-sdk-es6 && bundlesize && ENV=production build/scripts/publish.sh",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest watch --coverage",
     "publish": "npm run clean && npm run build:prod",
     "build:dev-dev": "./build/scripts/build.sh -f development -t development -a localhost",
     "build:dev-prod": "./build/scripts/build.sh -f development -t production",
@@ -66,10 +66,9 @@
     "@types/sinon": "^2.3.3",
     "@types/text-encoding": "^0.0.31",
     "@types/validator": "latest",
-    "@types/whatwg-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/coverage-v8": "^3.0.6",
     "autoprefixer": "^10.4.14",
     "ava": "^3.8.2",
     "bundlesize2": "^0.0.31",
@@ -88,7 +87,6 @@
     "msw": "^2.7.0",
     "nock": "^9.1.6",
     "node-dir": "^0.1.16",
-    "node-fetch": "^2.6.1",
     "nyc": "^11.1.0",
     "postcss-loader": "^7.2.4",
     "prettier": "3.0.2",
@@ -102,7 +100,7 @@
     "ts-node": "^10.1.1",
     "type-fest": "^4.33.0",
     "typescript": "^4.9.5",
-    "vitest": "^3.0.5",
+    "vitest": "^3.0.6",
     "webpack": "^5.80.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^5.0.2"
