replace jest with vitest
more clean up
Update __test__/README.md

Co-authored-by: Sherwin Heydarbeygi <sherwin@onesignal.com>

remove unneeded transpile tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,7 @@
     "noImplicitAny": true,
     "strictPropertyInitialization": true,
     "baseUrl": ".",
-    "types": ["jest", "node"]
+    "types": ["node", "vitest/globals"]
   },
-  "include": [
-    "__test__/**/*",
-    "src/**/*",
-    "test/**/*",
-    "typings/**/*",
-  ]
+  "include": ["__test__/**/*", "src/**/*", "test/**/*", "typings/**/*"]
 }
