--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@types/intl-tel-input": "^17.0.1",
     "bowser": "github:OneSignal/bowser#fix-android8-opr6-build-detection",
-    "core-js-bundle": "^3.1.3",
     "glob": "^10.2.2",
     "jsonp": "github:OneSignal/jsonp#onesignal",
     "npm-css": "https://registry.npmjs.org/npm-css/-/npm-css-0.2.3.tgz",
@@ -81,7 +80,7 @@
     "dom-storage": "^2.0.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "9.0.0",
-    "fake-indexeddb": "^4.0.1",
+    "fake-indexeddb": "^5.0.2",
     "imports-loader": "^0.7.1",
     "jsdom": "^26.0.0",
     "md5-file": "^3.2.2",
@@ -101,6 +100,7 @@
     "timemachine": "^0.3.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.1.1",
+    "type-fest": "^4.33.0",
     "typescript": "^4.9.5",
     "vitest": "^3.0.5",
     "webpack": "^5.80.0",
