--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,14 +16,7 @@ jobs:
       - name: '[Setup] Install dependencies'
         run: npm ci
       - name: '[Build] Staging'
-        env:
-          STAGING_DOMAIN: ${{ secrets.STAGING_DOMAIN }}
-        run: |
-          if [ -z "$STAGING_DOMAIN" ]; then
-            echo "Error: STAGING_DOMAIN secret is not set"
-            exit 1
-          fi
-          BUILD_ORIGIN=${STAGING_DOMAIN} API=staging API_ORIGIN=${STAGING_DOMAIN} npm run build:staging
+        run: npm run build:staging
       - name: '[Build] Production'
         run: npm run build:prod
       - name: 'Authenticate to Google Cloud'
