--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "onesignal-web-sdk",
   "version": "1.2.0",
   "description": "Web push notifications from OneSignal.",
+  "type": "module",
   "dependencies": {
     "bowser": "github:OneSignal/bowser#fix-android8-opr6-build-detection",
     "jsonp": "github:OneSignal/jsonp#onesignal"
