--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "dependencies": {
     "bowser": "github:OneSignal/bowser#fix-android8-opr6-build-detection",
-    "jsonp": "github:OneSignal/jsonp#onesignal"
+    "jsonp": "github:OneSignal/jsonp#onesignal",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "dev": "vite",
@@ -40,6 +41,7 @@
     "@types/intl-tel-input": "^18.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^18.18.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitest/coverage-v8": "3.0.9",
