change usages of loop waiter message to simple objects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "WebWorker"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable", "WebWorker"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -27,5 +27,5 @@
     },
     "types": ["vitest/globals"]
   },
-  "include": ["src"]
+  "include": ["src", "__test__"]
 }
