fix add email and add sms logic

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:logging": "LOGGING=true vite",
     "ngrok": "./build/scripts/ngrok.sh",
     "build:sdk": "LIB=sdk vite build",
     "build:page": "LIB=page vite build",
