--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,9 +1,8 @@
 name: 🪳 Bug report
 description: File a bug report
-title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - OneSignal/eng-developer-sdk
+title: '[Bug]: '
+labels: ['Bug']
+
 body:
   - type: markdown
     attributes:
