--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vitest/coverage-v8": "3.0.9",
+    "@vitest/coverage-v8": "3.1.3",
     "deepmerge": "^4.2.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "9.0.0",
-    "fake-indexeddb": "^5.0.2",
+    "fake-indexeddb": "6.0.1",
     "jsdom": "^26.0.0",
     "msw": "^2.7.4",
     "prettier": "3.0.2",
@@ -60,7 +60,7 @@
     "vite-bundle-analyzer": "^0.17.1",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "3.0.9"
+    "vitest": "3.1.3"
   },
   "size-limit": [
     {
