fix docker node modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       build: .
       volumes:
         - .:/sdk:cached
+        - /sdk/node_modules
+        - /sdk/preview/node_modules
         - ./build/releases:/sdk/build/releases
       ports:
           - published: 4001
