--- a/package.json
+++ b/package.json
@@ -65,17 +65,17 @@
   "size-limit": [
     {
       "path": "./build/releases/OneSignalSDK.page.js",
-      "limit": "1 kB",
+      "limit": "640 B",
       "gzip": true
     },
     {
       "path": "./build/releases/OneSignalSDK.page.es6.js",
-      "limit": "65 kB",
+      "limit": "64.3 kB",
       "gzip": true
     },
     {
       "path": "./build/releases/OneSignalSDK.sw.js",
-      "limit": "37.5 kB",
+      "limit": "37 kB",
       "gzip": true
     },
     {
