--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
     "build:page": "LIB=page vite build",
     "build:sw": "LIB=worker vite build",
     "build": "npm run build:sdk && npm run build:page && npm run build:sw",
+    "build:watch": "LIB=sdk vite build --watch",
     "build:dev": "ENV=development npm run build",
+    "build:dev:watch": "ENV=development concurrently \"LIB=sdk vite build --watch\" \"LIB=page vite build --watch\" \"LIB=worker vite build --watch\"",
     "build:staging": "ENV=staging BUILD_ORIGIN=staging.onesignal.com API=staging API_ORIGIN=staging.onesignal.com npm run build",
+    "build:staging:watch": "ENV=staging BUILD_ORIGIN=staging.onesignal.com API=staging API_ORIGIN=staging.onesignal.com npm run build:watch",
     "build:prod": "ENV=production API=production npm run build && size-limit",
+    "build:prod:watch": "ENV=production API=production npm run build:watch",
     "build:dev-dev": "API=development npm run build:dev",
+    "build:dev-dev:watch": "API=development npm run build:dev:watch",
     "build:dev-prod": "API=production API_ORIGIN=onesignal.com npm run build:dev",
+    "build:dev-prod:watch": "API=production API_ORIGIN=onesignal.com npm run build:dev:watch",
     "build:dev-stag": "API=staging API_ORIGIN=onesignal.com npm run build:dev",
+    "build:dev-stag:watch": "API=staging API_ORIGIN=onesignal.com npm run build:dev:watch",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx; prettylint 'src/**/*' 'test/**/*' '__test__/**/*' --no-editorconfig"
@@ -48,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitest/coverage-v8": "3.2.4",
+    "concurrently": "^9.2.0",
     "deepmerge": "^4.2.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "9.0.0",
