--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "LOGGING=false vite",
     "dev:logging": "LOGGING=true vite",
     "ngrok": "./build/scripts/ngrok.sh",
-    "prebuild": "tsc --noEmit",
+    "prebuild": "tsc --noEmit && mkdir -p build/stats",
     "build:sdk": "LIB=sdk vite build",
     "build:page": "LIB=page vite build",
     "build:sw": "LIB=worker vite build",
