--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
           node-version-file: '.nvmrc'
       - name: '[Setup] Install dependencies'
         run: npm ci
+      - name: 'Check build size'
+        run: npm run build:prod
       - name: '[Test] Run linters'
         run: npm run lint
       - name: '[Test] Run all tests'
