--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "@size-limit/file": "^11.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/body-parser": "latest",
     "@types/express": "^4.17.17",
     "@types/intl-tel-input": "^18.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/jsonp": "^0.2.3",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.3.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -60,6 +61,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "9.0.0",
     "fake-indexeddb": "5.0.2",
+    "intl-tel-input": "^25.4.0",
     "jsdom": "^26.1.0",
     "msw": "^2.10.5",
     "prettier": "3.6.2",
@@ -81,7 +83,7 @@
     },
     {
       "path": "./build/releases/OneSignalSDK.page.es6.js",
-      "limit": "54.812 kB",
+      "limit": "54.97 kB",
       "gzip": true
     },
     {
