--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,17 +43,8 @@ jobs:
         id: get_version
         run: echo "SDK_VERSION=$(node -p "require('./package.json').config.sdkVersion")" >> $GITHUB_OUTPUT
 
-      - name: '[Deploy] Checkout turbine repository'
-        uses: actions/checkout@v5
-        with:
-          repository: OneSignal/turbine
-          token: ${{ secrets.GH_TURBINE_TOKEN }}
-          path: turbine
       - name: '[Deploy] Create turbine pr'
-        run: |
-          cp ./build/scripts/turbine.sh ./turbine/
-          cd turbine
-          ./turbine.sh
+        run: ./build/scripts/turbine.sh
         env:
           GH_TURBINE_TOKEN: ${{ secrets.GH_TURBINE_TOKEN }}
           GITHUB_SHA: ${{ github.sha }}
